# edcas-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
.github/workflows/: rust.yml
src/: data.rs  main.rs
