[package]
name = "edcas-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0", features = ["json"] }
rocket_db_pools = { version = "0.1.0", features = ["sqlx_postgres"]}
rocket_sync_db_pools = { version = "0.1.0", features = ["postgres_pool"]}
json = "0.12.4"
serde_json = "1.0.114"
postgres = "0.19.7"